Update bucket analysis sheeet, add functions for bucket analysis

--- a/computation/similarity_values/hashed/bucketing_compute_grid_similarity_values.ipynb
+++ b/computation/similarity_values/hashed/bucketing_compute_grid_similarity_values.ipynb
@@ -13,6 +13,7 @@
     "* Bucketing of hashes made from grid scheme\n",
     "* Similarity computation between trajectories within buckets.\n",
     "    * Both for DTW and Frechet\n",
+    "* Analysis of the produced bucket system\n",
     "\n",
     "Produces:\n",
     "* JSON file containing buckets\n",
@@ -21,18 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Project root found: /Users/thomasnitsche/Developer/skole/master/masteroppgave\n",
-      "Project root found: /Users/thomasnitsche/Developer/skole/master/masteroppgave\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Importing nescessary modules\n",
@@ -62,9 +54,67 @@
     "\n",
     "#Other imports\n",
     "from computation.similarity import generate_grid_hash_similarity_with_bucketing\n",
+    "from utils.helpers.bucket_evaluation import *\n",
     "import json\n",
     "import pandas as pd\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CITY = \"rome\" # \"rome\" or \"porto\"\n",
+    "MEASURE = \"dtw\" # \"dtw\" or \"frechet\"\n",
+    "RESOLUTION = 10 # Resolution of the grid\n",
+    "LAYERS = 3 # Number of layers\n",
+    "SIZE = 3050 #How many trajectories to use"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Retrieving the true similarity values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = f\"../../../results_true/similarity_values/{CITY}/{MEASURE}/{CITY}-{MEASURE}-{SIZE}.csv\"\n",
+    "\n",
+    "# Read CSV, telling pandas to take the first column as the row labels:\n",
+    "true_sim_matrix_df = pd.read_csv(file_path, index_col=0)\n",
+    "\n",
+    "# Function to convert values to float if possible\n",
+    "def convert_to_float(value):\n",
+    "    try:\n",
+    "        return float(value)\n",
+    "    except ValueError:\n",
+    "        return value\n",
+    "\n",
+    "# Apply the function to each cell in the DataFrame\n",
+    "true_sim_matrix_df = true_sim_matrix_df.map(convert_to_float)\n",
+    "true_sim_matrix_df = (true_sim_matrix_df + true_sim_matrix_df.T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate hashes with grid scheme, bucket system and similarity values for the given city and measure"
    ]
   },
   {
@@ -83,20 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "city = \"rome\" #City to use\n",
-    "measure = \"dtw\" #Measure to use\n",
-    "res = 1.9 #Resolution to use\n",
-    "layers = 2 #Number of layers to use\n",
-    "size = 50 #Size of the grid to use\n",
-    "\n",
-    "\n",
     "#Creates buckets and similarity matrix\n",
-    "similarities, bucket_system = generate_grid_hash_similarity_with_bucketing(\n",
-    "    city=city, res=res, layers=layers, measure=measure, size=size\n",
+    "hashed_similarities, bucket_system = generate_grid_hash_similarity_with_bucketing(\n",
+    "    city=CITY, res=RESOLUTION, layers=LAYERS, measure=MEASURE, size=SIZE\n",
     ")"
    ]
   },
@@ -104,26 +147,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Write buckets to JSON and similarity matrix to CSV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write the bucket system to a JSON file\n",
-    "bucket_system_output_file_path = f\"../../../results_hashed/buckets/grid/rome/rome_grid_resolution_{res}_layers_{layers}_trajectories_{size}.json\"\n",
-    "with open(bucket_system_output_file_path, \"w\") as f:\n",
-    "    json.dump(bucket_system, f)"
+    "# Bucket analysis "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Write similarity matrix to CSV"
+    "## Bucket stats"
    ]
   },
   {
@@ -132,16 +163,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write similarity values to csv\n",
-    "output_path = \"../../../results_hashed/similarity_values/grid/rome/dtw/\"\n",
-    "similarities.to_csv(os.path.join(output_path, f\"rome_grid_resolution_{res}_layers_{layers}_trajectories_{size}_{measure}.csv\"))"
+    "total_buckets = len(bucket_system)\n",
+    "buckets_with_multiple = sum(1 for trajectories in bucket_system.values() if len(trajectories) > 1)\n",
+    "buckets_with_single = total_buckets - buckets_with_multiple\n",
+    "largest_bucket_size = max(len(trajectories) for trajectories in bucket_system.values())\n",
+    "largest_bucket = max(bucket_system, key=lambda key: len(bucket_system[key]))\n",
+    "\n",
+    "print(f\"Total Buckets: {total_buckets}\")\n",
+    "print(f\"Largest Bucket(id): {largest_bucket}\")\n",
+    "print(f\"Buckets with more than one trajectory: {buckets_with_multiple}\")\n",
+    "print(f\"Buckets with only one trajectory: {buckets_with_single}\")\n",
+    "print(f\"Largest Bucket Size: {largest_bucket_size}\")\n",
+    "\n",
+    "# Optional: Display distribution percentages\n",
+    "multiple_bucket_percentage = (buckets_with_multiple / total_buckets) * 100 if total_buckets > 0 else 0\n",
+    "single_bucket_percentage = (buckets_with_single / total_buckets) * 100 if total_buckets > 0 else 0\n",
+    "\n",
+    "print(f\"Percentage of buckets with more than one trajectory: {multiple_bucket_percentage:.2f}%\")\n",
+    "print(f\"Percentage of buckets with only one trajectory: {single_bucket_percentage:.2f}%\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Frechet\n"
+    "## TP, FP, FN, PRECISION, RECALL"
    ]
   },
   {
@@ -150,33 +196,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "measure = \"frechet\"\n",
-    "similarities = generate_disk_hash_similarity(\n",
-    "    city=\"rome\", diameter=1.6, layers=5, disks=100, measure=measure, size=500\n",
-    ")\n",
-    "output_path = f\"similarity_values/disk/rome/disk_rome-{measure}.csv\"\n",
-    "similarities.to_csv(os.path.abspath(output_path))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Porto\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "measure = \"dtw\"\n",
-    "similarities = generate_disk_hash_similarity(\n",
-    "    \"porto\", diameter=2.2, layers=4, disks=60, measure=measure, size=50\n",
-    ")\n",
-    "output_path = f\"similarity_values/disk/porto/disk_porto-{measure}.csv\"\n",
-    "similarities.to_csv(os.path.abspath(output_path))"
+    "THRESHOLD = 2.5\n",
+    "\n",
+    "\n",
+    "#Variables\n",
+    "all_trajectory_names = list(hashed_similarities.keys()) # All trajectory names\n",
+    "true_positives = 0\n",
+    "false_positives = 0\n",
+    "false_negatives = 0\n",
+    "precision = 0 \n",
+    "recall = 0\n",
+    "f1_Score = 0\n",
+    "\n",
+    "# Loop through all trajectory names\n",
+    "for trajectory in all_trajectory_names:\n",
+    "    \n",
+    "    # Pred and ground truth\n",
+    "    predicted_similar = find_predicted_similar_trajectories(trajectory, bucket_system)\n",
+    "    ground_truth = get_nearest_neighbour_under_threshold(trajectory, THRESHOLD, true_sim_matrix_df).index.to_list()\n",
+    "    # print(predicted_similar)\n",
+    "    # print(ground_truth)    \n",
+    "    true_positives += calculate_true_positives(predicted_similar, ground_truth)\n",
+    "    false_positives += calculate_false_positives(predicted_similar, ground_truth)\n",
+    "    false_negatives += calculate_false_negatives(predicted_similar, ground_truth)\n",
+    "\n",
+    "\n",
+    "# Calculate precision and recall\n",
+    "precision = compute_bucket_system_precision(true_positives, false_positives)\n",
+    "recall = compute_bucket_system_recall(true_positives, false_negatives)\n",
+    "f1_Score = compute_bucket_system_f1_score(precision, recall)\n",
+    "\n",
+    "print(f\"Bucket system statistics for city: {CITY}, measure: {MEASURE}, diameter: {DIAMETER}, layers: {LAYERS}, disks: {DISKS}, size: {SIZE}\")\n",
+    "print(f\"Precision: {precision}\")\n",
+    "print(f\"Recall: {recall}\")\n",
+    "print(f\"F1-Score: {f1_Score}\")\n",
+    "    "
    ]
   }
  ],
