added new bucketing method in lsh_bucketing.py

--- a/computation/similarity_values/hashed/bucketing_compute_disk_similarity_values.ipynb
+++ b/computation/similarity_values/hashed/bucketing_compute_disk_similarity_values.ipynb
@@ -49,7 +49,7 @@
     "else:\n",
     "    raise RuntimeError(\"Could not find 'masteroppgave' directory\")\n",
     "\n",
-    "from computation.similarity import generate_disk_hash_similarity_with_bucketing\n",
+    "from computation.similarity import *\n",
     "from utils.helpers.bucket_evaluation import *\n",
     "import json\n",
     "import pandas as pd\n"
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "CITY = \"rome\" # \"rome\" or \"porto\"\n",
     "MEASURE = \"dtw\" # \"dtw\" or \"frechet\"\n",
-    "DIAMETER = 1.6 # Diameter of the disks\n",
-    "LAYERS = 10 # Number of layers\n",
-    "DISKS = 4 # NUmber of disks\n",
-    "SIZE = 3050 #How many trajectories to use"
+    "DIAMETER = 2 # Diameter of the disks\n",
+    "LAYERS = 2 # Number of layers\n",
+    "DISKS = 20 # NUmber of disks\n",
+    "SIZE = 500 #How many trajectories to use"
    ]
   },
   {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hashed_similarities.head(40)"
+    "hashed_similarities.head(40)"
    ]
   },
   {
@@ -269,7 +269,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "master",
+   "display_name": "master_repo",
    "language": "python",
    "name": "python3"
   },
