--- a/computation/bucketing/compute_bucketing_ground_truth.ipynb
+++ b/computation/bucketing/compute_bucketing_ground_truth.ipynb
@@ -308,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "master_repo",
+   "display_name": "master",
    "language": "python",
    "name": "python3"
   },
